src/objects/Promotion__c.object
<CustomObject>
    <fields>
        <fullName>Condition_Level__c</fullName>
        <label>Condition Level</label>
        <picklist>
            <picklistValues>
                <fullName>Order Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Item Level</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Condition_Max_No__c</fullName>
        <label>Condition Max No</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Condition_Min_No__c</fullName>
        <label>Condition Min No</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Condition_Type__c</fullName>
        <label>Condition Type</label>
        <picklist>
            <picklistValues>
                <fullName>Amount Threshold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quantity Threshold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Daily_End_Time__c</fullName>
        <label>Daily End Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Start_Time__c</fullName>
        <label>Daily Start Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <label>Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>Percent</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quantity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Value</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eff_TimeStamp__c</fullName>
        <label>Eff_TimeStamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Event</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>promotions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exclusive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>As of now all promotions are exclusive,
True - Only one promocode can be used on entire order.
False - This promo code can be used with other non-exclusive codes.</description>
        <label>Exclusive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exp_TimeStamp__c</fullName>
        <label>Exp_TimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>I_Max_Count__c</fullName>
        <label>I Max Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Type__c</fullName>
        <label>Promotion Type</label>
        <picklist>
            <picklistValues>
                <fullName>Basic Promo codes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Items Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy Something Get Something</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spend More Save More</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active and Enable for online registrations</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>T_Max_Count__c</fullName>
        <defaultValue>1</defaultValue>
        <description>How many times total the promo code can be used</description>
        <label>T Max Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_Used_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>total actual usage of the promotion code. starts from 0 goes upto max count.</description>
        <label>T Used Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Promo code</fullName>
                <color>#F3D904</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Automatic discount</fullName>
                <color>#A53711</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>BLN Promotion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event__c</columns>
        <columns>Eff_TimeStamp__c</columns>
        <columns>Promo_Code__c</columns>
        <columns>Discount_Type__c</columns>
        <columns>Discount_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>